--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,2 @@
-name: Build
-on: [pull_request, push]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: gradle/wrapper-validation-action@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 17
-      - name: Build
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: build --stacktrace
-      - uses: actions/upload-artifact@v2
-        with:
-          name: TerraCraft
-          path: build/libs/
+- name: Gradle Build Action
+  uses: gradle/gradle-build-action@v2.1.5
