--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,2 +1,15 @@
-- name: Gradle Build Action
-  uses: gradle/gradle-build-action@v2.1.5
+name: Java CI
+
+on: [push]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+      - name: Build with Gradle
+        run: ./gradlew clean build --refresh-dependencies --stacktrace
