--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,40 @@
-name: Java CI
+# Automatically build the project and run any configured tests for every push
+# and submitted pull request. This can help catch issues that only occur on
+# certain platforms or Java versions, and provides a first line of defence
+# against bad commits.
 
-on: [push]
+name: Check Build
+on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # Use these Java versions
+        java: [
+          17,  # Minimum
+        ]
+        os: [ubuntu-20.04]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 17
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+      - name: Setup JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
-          java-version: 17
-      - name: Make gradlew executable
+          java-version: ${{ matrix.java }}
+      - name: Make Gradle wrapper executable
+        if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
-      - name: Build with Gradle
-        run: ./gradlew clean build --refresh-dependencies --stacktrace
+      - name: Build
+        run: ./gradlew build --stacktrace --parallel
+      - name: Capture build artifacts
+        if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from LTS java on one OS
+        uses: actions/upload-artifact@v2
+        with:
+          name: Artifacts
+          path: build/libs/
