--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,40 +1,62 @@
 name: Release
 on:
-  push:
-      tags:
-        - 'v*'
-
+  workflow_dispatch:
+    inputs:
+      previousVersion:
+        description: 'Previous Version (Do not include v prefix, must be same as the last version tag! Example: 1.4.1)'
+        required: true
+      version:
+        description: 'Version (Do not include v prefix! Example: 1.4.2)'
+        required: true
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  release:
+    strategy:
+      matrix:
+        # Use these Java versions
+        java: [17]
+        # and run on both Linux and Windows
+        os: [ubuntu-20.04]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-      - name: Get version from tag
-        id: tag_name
-        run: echo ::set-output name=version::${GITHUB_REF#refs/tags/v}
-      - name: Extract Changelog
-        uses: mindsers/changelog-reader-action@v2
-        id: changelog_reader
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
-          version: ${{ steps.tag_name.outputs.version }}
-      - name: Validate gradle wrapper
+          fetch-depth: 0
+      - name: Create version tag
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ github.token }}
+          script: |
+            github.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/v${{ github.event.inputs.version }}",
+              sha: context.sha
+            })
+      - name: Fetch tags
+        run: git fetch --tags
+      - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
-      - uses: actions/setup-java@v1
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v1
         with:
-          java-version: 17
-      - name: Build and release on curseforge
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: curseforge --stacktrace
+          java-version: ${{ matrix.java }}
+      - name: Make Gradle wrapper executable
+        if: ${{ runner.os != 'Windows' }}
+        run: chmod +x ./gradlew
+      - name: Build
+        run: ./gradlew generateChangelog build publish curseforge github publishModrinth --stacktrace --parallel -PlastTag="v${{ github.event.inputs.previousVersion }}" -PcurrentTag="v${{ github.event.inputs.version }}"
         env:
-          CURSE_API_KEY: ${{ secrets.CF_API_TOKEN }}
-          CHANGELOG: ${{ steps.changelog_reader.outputs.changes }}
-      - name: Publish to Github releases
-        uses: softprops/action-gh-release@v1
+          # MAVEN_URL: ${{ secrets.MAVEN_URL }}
+          # MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          # MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          # CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
+          # GITHUB_TOKEN: ${{ secrets.GH_API_KEY }}
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+          # DISCORD_ANNOUNCEMENT_WEBHOOK: ${{ secrets.DISCORD_ANNOUNCEMENT_WEBHOOK }}
+      - name: Capture build artifacts
+        if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from LTS java on one OS
+        uses: actions/upload-artifact@v2
         with:
-          files: build/libs/*.jar
-          body: ${{ steps.changelog_reader.outputs.changes }}
-          draft: ${{ steps.changelog_reader.outputs.status == 'unreleased' }}
-          prerelease: ${{ steps.changelog_reader.outputs.status == 'prereleased' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: Artifacts
+          path: build/libs/
