--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,9 @@ minecraft_version=1.18.2
 loader_version=0.13.3
 parchment_version=2022.03.13
 
+# Modrinth
+modrinth_id=FITNe4Wt
+
 # Mod Properties
 mod_version=1.0.1
 maven_group=terracraft
