Used wrong modrinth id, fixed

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.13.3
 parchment_version=2022.03.13
 
 # Modrinth
-modrinth_id=FITNe4Wt
+modrinth_id=WbwMfRsz
 
 # Mod Properties
 mod_version=1.0.1
