--- a/build.gradle
+++ b/build.gradle
@@ -68,10 +68,7 @@ sourceSets {
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    //mappings loom.layered() {
-    //    officialMojangMappings()
-    //    parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_version}@zip")
-    //}
+
     mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
@@ -84,7 +81,7 @@ dependencies {
     modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cca_version}")
     modImplementation include("be.florens:expandability-fabric:${project.expandability_version}")
     modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
-    //modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}+${minecraft_version}") // keep if using for chests, otherwise yeet
+    modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}+${minecraft_version}")
     modImplementation "com.github.glitchfiend:TerraBlender-fabric:${minecraft_version}-${terrablender_version}"
     modImplementation include("com.jamieswhiteshirt:reach-entity-attributes:2.1.1")
     modImplementation "com.github.CrimsonDawn45:Fabric-Shield-Lib:${project.fabric_shield_lib_version}"
