--- a/src/main/resources/assets/terracraft/models/item/treasure_magnet.json
+++ b/src/main/resources/assets/terracraft/models/item/treasure_magnet.json
@@ -1,6 +1,6 @@
 {
   "parent": "minecraft:item/generated",
   "textures": {
-    "layer0": "terracraft:item/universal_attractor"
+    "layer0": "terracraft:item/treasure_magnet"
   }
 }
