--- a/.github/workflows/modrinth_update.yml
+++ b/.github/workflows/modrinth_update.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Make Gradle wrapper executable
+        if: ${{ runner.os != 'Windows' }}
+        run: chmod +x ./gradlew
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
