--- a/build.gradle
+++ b/build.gradle
@@ -7,17 +7,6 @@ plugins {
     id 'com.modrinth.minotaur' version '2.+'
 }
 
-import com.google.gson.GsonBuilder
-import com.google.gson.JsonObject
-import com.modrinth.minotaur.responses.ResponseError
-import org.apache.http.client.config.CookieSpecs
-import org.apache.http.client.config.RequestConfig
-import org.apache.http.client.entity.EntityBuilder
-import org.apache.http.client.methods.HttpPatch
-import org.apache.http.entity.ContentType
-import org.apache.http.impl.client.HttpClientBuilder
-import org.apache.http.util.EntityUtils
-
 repositories {
     maven { url = "https://maven.terraformersmc.com" }
     maven { url = "https://maven.shedaniel.me/" }
@@ -81,6 +70,9 @@ dependencies {
 
     mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
+    implementation include("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
+    annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
 
     // Dependencies
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}+${minecraft_version}"
@@ -178,36 +170,6 @@ modrinth {
         afterEvaluate {
             tasks.modrinth.setEnabled(false)
         }
-    }
-}
-
-tasks.modrinth.dependsOn(build)
-tasks.modrinth.doFirst {
-    final def client = HttpClientBuilder.create().setDefaultRequestConfig(RequestConfig.custom().setCookieSpec(CookieSpecs.IGNORE_COOKIES).build()).build()
-    final def patch = new HttpPatch((String) (modrinth.apiUrl.get() + '/project/' + project.modrinth_id))
-    patch.addHeader("Authorization", modrinth.token.get())
-
-    var json = new JsonObject()
-    json.addProperty("body", parseReadme())
-    patch.setEntity(EntityBuilder.create()
-            .setText(json.toString())
-            .setContentType(ContentType.APPLICATION_JSON)
-            .build())
-
-    final def response = client.execute(patch)
-    final int status = response.getStatusLine().getStatusCode()
-
-    final def gson = new GsonBuilder().create()
-    if (status == 200 || status == 204) {
-        project.getLogger().lifecycle("Successfully updated readme to ${modrinth.projectId.get()}.")
-    } else {
-        if (response.getEntity() == null) {
-            project.getLogger().error("Readme update failed! Status: ${status} Reason: ${response.statusLine.reasonPhrase}")
-            throw new GradleException("Readme update failed! Status: ${status} Reason: ${response.statusLine.reasonPhrase}")
-        }
-        errorInfo = gson.fromJson(EntityUtils.toString(response.getEntity()), ResponseError.class)
-        project.getLogger().error("Readme update failed! Status: ${status} Error: ${errorInfo.getError()} Reason: ${errorInfo.getDescription()}")
-        throw new GradleException("Readme failed! Status: ${status} Reason: ${errorInfo.getDescription()}")
     }
 }
 
