--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,13 @@ org.gradle.daemon=false
 minecraft_version=1.18.2
 loader_version=0.13.3
 parchment_version=2022.03.13
+mixinextras_version=0.0.9
 
 # Modrinth
 modrinth_id=WbwMfRsz
 
 # Mod Properties
-mod_version=1.2.0
+mod_version=1.3.0
 maven_group=terracraft
 archives_base_name=terracraft
 
