Started renaming mod to TerraMine (have to change all the internal naming now).
Ancient Chisel now functions (I forgot I guess), Mining Potion added since it uses the same mixin.
Updated some deprecated code.

Bump version to 1.3.1.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,35 +7,34 @@ org.gradle.daemon=false
 # Fabric Properties (https://modmuss50.me/fabric.html)
 minecraft_version=1.18.2
 loader_version=0.13.3
-parchment_version=2022.03.13
-mixinextras_version=0.0.9
+mixinextras_version=0.0.10
 
 # Modrinth
 modrinth_id=WbwMfRsz
 
 # Mod Properties
-mod_version=1.3.0
-maven_group=terracraft
-archives_base_name=terracraft
+mod_version=1.3.1
+maven_group=terramine
+archives_base_name=terramine
 
 # Dependencies
-fabric_version=0.48.0
+fabric_version=0.54.0
 trinkets_version=3.3.0
 cca_version=4.1.4
-libgui_version=5.3.2
+libgui_version=5.4.2
 expandability_version=6.0.0
-terrablender_version=1.1.0.98
-cloth_config_version=6.2.57
-mod_menu_version=3.1.0
+terrablender_version=1.1.0.101
+cloth_config_version=6.2.62
+mod_menu_version=3.2.2
 step_height_attr_version=v1.0.1
-rei_version=8.0.442
+rei_version=8.2.470
 fabric_shield_lib_version=1.5.3-1.18
 lambda_dynamic_lights_version=2.1.0+1.17
 
-# Dev runtime
+# Dev runtime, get better stuff for this
 autoload_version=1.1.3
 
-# Compat
+# Compat, maybe remove these at some point since they don't do anything
 origins_version=1.3.1
 apoli_version=2.2.2
 calio_version=1.4.2
