--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,8 @@ dependencies {
     }
     modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cca_version}")
     modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cca_version}")
+    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-level:${cca_version}")
+    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${cca_version}")
     modImplementation include("be.florens:expandability-fabric:${project.expandability_version}")
     modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
     modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}+${minecraft_version}")
