--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ modrinth_id=WbwMfRsz
 
 # Mod Properties
 mod_version=1.3.4
-maven_group=terramine
+maven_group=com.github.jakeb072001
 archives_base_name=terramine
 
 # Dependencies
