--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,2 +1,3 @@
-jdk:
-  - openjdk17
+before_install:
+  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
+  - source install-jdk.sh --feature 17
