--- a/gradle.properties
+++ b/gradle.properties
@@ -5,31 +5,31 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Fabric Properties (https://modmuss50.me/fabric.html)
-minecraft_version=1.18.2
-loader_version=0.13.3
-mixinextras_version=0.0.10
+minecraft_version=1.19
+loader_version=0.14.6
+mixinextras_version=0.0.11
 
 # Modrinth
 modrinth_id=WbwMfRsz
 
 # Mod Properties
-mod_version=1.3.4
+mod_version=1.3.5
 maven_group=com.github.jakeb072001
 archives_base_name=terramine
 
 # Dependencies
-fabric_version=0.54.0
-trinkets_version=3.3.0
-cca_version=4.1.4
-libgui_version=5.4.2
+fabric_version=0.56.0
+trinkets_version=3.4.0
+cca_version=5.0.0-beta.1
+libgui_version=6.0.0-beta.5+1.19-pre1
 expandability_version=6.0.0
-terrablender_version=1.1.0.101
-cloth_config_version=6.2.62
-mod_menu_version=3.2.2
+terrablender_version=2.0.0.112
+cloth_config_version=7.0.72
+mod_menu_version=4.0.0
 step_height_attr_version=v1.0.1
-rei_version=8.2.470
-fabric_shield_lib_version=1.5.3-1.18
-lambda_dynamic_lights_version=2.1.0+1.17
+reach_entity_attr_version=2.3.0
+rei_version=9.0.475
+lamb_dynamic_lights_version=2.1.2+1.19
 
 # Dev runtime, get better stuff for this
 autoload_version=1.1.3
