--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'fabric-loom' version '0.12-SNAPSHOT'
-    id 'io.github.juuxel.loom-quiltflower' version '1.6.1'
+    id 'io.github.juuxel.loom-quiltflower' version '1.7.1'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
@@ -25,7 +25,7 @@ repositories {
             includeGroup "curse.maven"
         }
     }
-    maven { // Leave this as lowest priority
+    maven {
         url = "https://jitpack.io"
         content {
             includeGroupByRegex "com.github.*"
@@ -71,9 +71,6 @@ dependencies {
     mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    implementation include("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
-    annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
-
     // Dependencies
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}+${minecraft_version}"
     modImplementation("dev.emi:trinkets:${project.trinkets_version}") {
@@ -84,21 +81,22 @@ dependencies {
     modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-level:${cca_version}")
     modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${cca_version}")
     modImplementation include("be.florens:expandability-fabric:${project.expandability_version}")
-    modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
-    modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}+${minecraft_version}")
+    modImplementation include("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")
+    modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
     modImplementation "com.github.glitchfiend:TerraBlender-fabric:${minecraft_version}-${terrablender_version}"
-    modImplementation include("com.jamieswhiteshirt:reach-entity-attributes:2.1.1")
-    modImplementation "com.github.CrimsonDawn45:Fabric-Shield-Lib:${project.fabric_shield_lib_version}"
+    modImplementation include("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attr_version}")
     modImplementation include("com.github.emilyploszaj:step-height-entity-attribute:${project.step_height_attr_version}") {
         transitive = false
     }
+    implementation include("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
+    annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
 
     // Optional
     modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}") {
         transitive = false
     }
     modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
-    modImplementation("dev.lambdaurora:lambdynamiclights:${project.lambda_dynamic_lights_version}")
+    modImplementation("dev.lambdaurora:lambdynamiclights:${project.lamb_dynamic_lights_version}")
 
     // Compat
     modCompileOnly("com.github.apace100:origins-fabric:v${project.origins_version}") {
