--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,18 +8,33 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # Use these Java versions
+        java: [
+          17,  # Minimum
+        ]
+        os: [ubuntu-20.04]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: gradle/wrapper-validation-action@v1
-      - uses: actions/setup-java@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
-          java-version: 17
+          fetch-depth: 0
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
+      - name: Make Gradle wrapper executable
+        if: ${{ runner.os != 'Windows' }}
+        run: chmod +x ./gradlew
       - name: Build
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: build --stacktrace
-      - uses: actions/upload-artifact@v2
+        run: ./gradlew build --stacktrace --parallel
+      - name: Capture build artifacts
+        if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from LTS java on one OS
+        uses: actions/upload-artifact@v2
         with:
           name: Artifacts
           path: build/libs/
