Testing new build and release yml

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'fabric-loom' version '0.12-SNAPSHOT'
     id 'io.github.juuxel.loom-quiltflower' version '1.7.1'
-    id 'com.matthewprenger.cursegradle' version '1.4.0'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
-    id 'com.modrinth.minotaur' version '2.+'
+    id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id 'com.modrinth.minotaur' version '2.3.1'
 }
 
 repositories {
@@ -136,72 +136,35 @@ jar {
     }
 }
 
-modrinth {
-    token = System.getenv("MODRINTH_TOKEN")
-    projectId = project.modrinth_id
-    versionName = "TerrariaCraft ${project.mod_version} (${project.minecraft_version})"
-    versionType = "beta"
-    uploadFile = tasks.remapJar
-    gameVersions = [project.minecraft_version]
-    loaders = ["fabric"]
-    dependencies = [
-    ]
-
-    // Changelog fetching
-    def changelogText = file('CHANGELOG.md').text.replaceAll('\\r\\n', '\n')
-    def regexVersion = ((String) project.mod_version).replaceAll('\\.', /\\./).replaceAll('\\+', '\\+')
-    def changelogRegex = ~"###? ${regexVersion}\\n\\n(( *- .+\\n)+)"
-    def matcher = changelogText =~ changelogRegex
-
-    if (matcher.find()) {
-        def changelogContent = matcher.group(1)
-
-        def changelogLines = changelogText.split('\n')
-        def linkRefRegex = ~'^\\[([A-z0-9 _\\-/+.]+)]: '
-        for (int i = changelogLines.length - 1; i > 0; i--) {
-            def line = changelogLines[i]
-            if ((line =~ linkRefRegex).find())
-                changelogContent += '\n' + line
-            else break
-        }
-
-        changelog = changelogContent
-    } else {
-        afterEvaluate {
-            tasks.modrinth.setEnabled(false)
-        }
-    }
-}
-
 curseforge {
     if (System.getenv("CURSE_API_KEY") != null) {
         apiKey = System.getenv("CURSE_API_KEY")
 
         project {
-            id = "401236"
-            releaseType = "release"
+            id = "629183"
+            releaseType = "beta"
 
             changelogType = "markdown"
-            //changelog = System.getenv("CHANGELOG") ?: "https://github.com/florensie/terramine-fabric/blob/master/CHANGELOG.md"
+            changelog = System.getenv("CHANGELOG") ?: "https://github.com/jakeb072001/TerraMine/blob/" + project.minecraft_version + "/CHANGELOG.md"
 
-            addGameVersion "1.18"
-            addGameVersion "1.18.1"
+            addGameVersion project.minecraft_version
             addGameVersion "Fabric"
             relations {
+                requiredDependency "architectury-api"
                 requiredDependency "fabric-api"
-                requiredDependency "cloth-config"
-                requiredDependency "trinkets-fabric"
-                embeddedLibrary "cardinal-components"
-                embeddedLibrary "expandability"
-                optionalDependency "modmenu"
+                requiredDependency "trinkets"
+                requiredDependency "terrablender-fabric"
+                optionalDependency "continuity"
+                optionalDependency "lambdabettergrass"
+                optionalDependency "lambdynamiclights"
             }
 
             mainArtifact(remapJar.archiveFile) {
-                displayName = "${project.mod_version} for Minecraft 1.18-18.2"
+                displayName = "TerraMine " + project.mod_version
             }
 
             afterEvaluate {
-                uploadTask.dependsOn("build")
+                uploadTask.dependsOn(remapJar)
             }
         }
     }
@@ -211,11 +174,24 @@ curseforge {
     }
 }
 
+modrinth {
+    token = System.getenv("MODRINTH_TOKEN")
+    projectId = "terramine"
+    versionName = "TerraMine " + project.mod_version
+    uploadFile = remapJar
+    changelog = System.getenv("CHANGELOG") ?: "https://github.com/jakeb072001/TerraMine/blob/" + project.minecraft_version + "/CHANGELOG.md"
+
+    dependencies {
+        required.project "fabric-api"
+        required.project "trinkets"
+        required.project "architectury-api"
+    }
+}
+
 // configure the maven publication
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            // add all the jars that should be included when publishing to maven
             artifact(remapJar) {
                 builtBy remapJar
             }
@@ -225,12 +201,7 @@ publishing {
         }
     }
 
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
         mavenLocal()
     }
 }
