Re-Added Cobalt and Obsidian shield. No longer uses Fabric Shield API as it is currently outdated and has multiple bugs, overall its just jank. Shields now have descriptions and can be equipped in the accessories slots (should also work with Tiered now)
Updated resource pack version.

--- a/build.gradle
+++ b/build.gradle
@@ -178,6 +178,7 @@ modrinth {
     token = System.getenv("MODRINTH_TOKEN")
     projectId = "terramine"
     versionName = "TerraMine " + project.mod_version
+    versionNumber = project.mod_version
     versionType = "beta"
     uploadFile = remapJar
     changelog = System.getenv("CHANGELOG") ?: "https://github.com/jakeb072001/TerraMine/blob/" + project.minecraft_version + "/CHANGELOG.md"
