Fixed piggy bank and safe sharing inventory on server.
Bump to 1.3.6.

Merged some Artifacts changes.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,11 @@
 # against bad commits.
 
 name: Gradle Build
-on: [push, pull_request]
+on:
+  push:
+    tags-ignore:
+      - v**
+  pull_request:
 
 jobs:
   build:
