--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,7 @@
 # against bad commits.
 
 name: Gradle Build
-on:
-  push:
-    tags-ignore:
-      - v**
-  pull_request:
+on: [pull_request, push]
 
 jobs:
   build:
