Changed 1.3.6 release date to be correct.
Demon Eyes now bounce against walls.
Working on getting the Demon Eyes to pitch up and down to look at player, haven't got it yet.

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ archives_base_name=terramine
 # Dependencies
 fabric_version=0.56.0
 trinkets_version=3.4.0
+geckolib_version=3.1.4
 cca_version=5.0.0-beta.1
 libgui_version=6.0.0-beta.5+1.19-pre1
 expandability_version=6.0.0
