--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
     maven { url = "https://maven.shedaniel.me/" }
     maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
     maven { url = "https://maven.gegy.dev/" }
+    maven { url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/" }
     maven {
         url = "https://maven.florens.be"
         content {
@@ -77,11 +78,12 @@ dependencies {
         transitive = false
     }
     modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
-    modImplementation "com.github.glitchfiend:TerraBlender-fabric:${minecraft_version}-${terrablender_version}"
-    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cca_version}")
-    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cca_version}")
-    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-level:${cca_version}")
-    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${cca_version}")
+    modImplementation "com.github.glitchfiend:TerraBlender-fabric:${project.minecraft_version}-${project.terrablender_version}"
+    // modImplementation "software.bernie.geckolib:geckolib-fabric-1.19:${project.geckolib_version}"
+    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-level:${project.cca_version}")
+    modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}")
     modImplementation include("be.florens:expandability-fabric:${project.expandability_version}")
     modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
     modImplementation include("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attr_version}")
