--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ mixinextras_version=0.0.12
 modrinth_id=WbwMfRsz
 
 # Mod Properties
-mod_version=1.5.0
+mod_version=1.5.1
 maven_group=com.github.jakeb072001
 archives_base_name=terramine
 
@@ -21,6 +21,7 @@ archives_base_name=terramine
 fabric_version=0.57.0
 trinkets_version=3.4.0
 geckolib_version=3.1.4
+porting_lib_version=2.0.378
 cca_version=5.0.0-beta.1
 libgui_version=6.0.0-beta.5+1.19-pre1
 expandability_version=6.0.0
