--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Fabric Properties (https://modmuss50.me/fabric.html)
-minecraft_version=1.19
-loader_version=0.14.6
+minecraft_version=1.18.2
+loader_version=0.13.3
 mixinextras_version=0.0.12
 
 # Modrinth
@@ -19,19 +19,19 @@ archives_base_name=terramine
 
 # Dependencies
 fabric_version=0.57.0
-trinkets_version=3.4.0
+trinkets_version=3.3.0
 geckolib_version=3.1.4
-porting_lib_version=2.0.378
-cca_version=5.0.0-beta.1
-libgui_version=6.0.0-beta.5+1.19-pre1
+porting_lib_version=1.2.575-beta+1.18.2-stable
+cca_version=4.2.0
+libgui_version=5.4.2+1.18.2
 expandability_version=6.0.0
-terrablender_version=2.0.0.112
-cloth_config_version=7.0.72
-mod_menu_version=4.0.0
+terrablender_version=1.2.0.126
+cloth_config_version=6.2.62
+mod_menu_version=3.2.2
 step_height_attr_version=v1.0.1
-reach_entity_attr_version=2.3.0
-rei_version=9.0.475
-lamb_dynamic_lights_version=2.1.2+1.19
+reach_entity_attr_version=2.2.0
+rei_version=8.2.470
+lamb_dynamic_lights_version=2.1.0+1.17
 
 # Dev runtime, get better stuff for this
 autoload_version=1.1.3
@@ -41,4 +41,4 @@ origins_version=1.3.1
 apoli_version=2.2.2
 calio_version=1.4.2
 haema_version=3596400
-wthit_version=5.7.0
+wthit_version=4.13.3
