Preparing for 1.7.0. Added a whole new GUI for easy access to accessories, vanity, and dyes. GUI will also be used for various teams stuff later (teams are going to be very important for servers). Also plan to update Minecraft to 1.19.4, got some atlas stuff in place but will probably need to do a lot for the update.
I plan to remove Trinkets as a dependency, the mod is cool and easy to use, but I just don't have enough access to the slots for what I need. It's going to take a while, but I'm going to try to add my own system to make the accessories function.

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,6 @@ repositories {
     maven { url = "https://maven.gegy.dev/" }
     maven { url = "https://mvn.devos.one/snapshots/" }
     maven { url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/" }
-    maven { url "https://maven.bai.lol" }
     maven { url = "https://maven.florens.be/releases" }
     maven { url = "https://maven.parchmentmc.org" }
     maven {
@@ -29,6 +28,7 @@ repositories {
             includeGroupByRegex "com.github.*"
         }
     }
+    maven { url "https://maven.bai.lol" }
     maven {
         url "https://maven.jamieswhiteshirt.com/libs-release"
         content {
@@ -88,8 +88,7 @@ dependencies {
     modImplementation include("com.github.emilyploszaj:step-height-entity-attribute:${project.step_height_attr_version}") {
         transitive = false
     }
-    implementation include("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
-    annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
+    include(implementation(annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")))
 
     // Optional
     modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}") {
