--- a/build.gradle
+++ b/build.gradle
@@ -148,6 +148,8 @@ jar {
         rename { "${it}_${project.archivesBaseName}"}
     }
 
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+
     dependsOn 'runDatagen'
 }
 
