Fixed server crash with auto swing Fixed accessories and vanity stuff not showing for other players on server Magic Mirror sound now plays at the original and destination locations
Haven't got custom armor models working yet, but I can do that for the next update along with a bunch of vanity armors and accessory models

--- a/build.gradle
+++ b/build.gradle
@@ -177,7 +177,7 @@ curseforge {
             }
 
             mainArtifact(remapJar.archiveFile) {
-                displayName = "TerraMine " + project.mod_version
+                displayName = "[" + project.fake_minecraft_version + "] " + "TerraMine " + project.mod_version
             }
 
             afterEvaluate {
@@ -194,7 +194,7 @@ curseforge {
 modrinth {
     token = System.getenv("MODRINTH_TOKEN")
     projectId = "terramine"
-    versionName = "TerraMine " + project.mod_version
+    versionName = "[" + project.fake_minecraft_version + "] " + "TerraMine " + project.mod_version
     versionNumber = project.mod_version
     versionType = "beta"
     uploadFile = remapJar
@@ -202,6 +202,7 @@ modrinth {
 
     dependencies {
         required.project "fabric-api"
+        required.project "cloth-config"
         required.project "architectury-api"
     }
 }
