--- a/build.gradle
+++ b/build.gradle
@@ -94,8 +94,7 @@ dependencies {
     modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-level:${project.cca_version}")
     modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}")
     modImplementation include("be.florens:expandability-fabric:${project.expandability_version}")
-    modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}+${project.fake_minecraft_version}")
-    // modImplementation include("io.github.fabricators_of_create:Porting-Lib:${project.porting_lib_version}")
+    modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}+${project.minecraft_version}")
     modImplementation include("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attr_version}")
     modImplementation include("com.github.emilyploszaj:step-height-entity-attribute:${project.step_height_attr_version}") {
         transitive = false
@@ -177,7 +176,7 @@ curseforge {
             }
 
             mainArtifact(remapJar.archiveFile) {
-                displayName = "[" + project.fake_minecraft_version + "] " + "TerraMine " + project.mod_version
+                displayName = "[" + project.minecraft_version + "] " + "TerraMine " + project.mod_version
             }
 
             afterEvaluate {
@@ -194,7 +193,7 @@ curseforge {
 modrinth {
     token = System.getenv("MODRINTH_TOKEN")
     projectId = "terramine"
-    versionName = "[" + project.fake_minecraft_version + "] " + "TerraMine " + project.mod_version
+    versionName = "[" + project.minecraft_version + "] " + "TerraMine " + project.mod_version
     versionNumber = project.mod_version
     versionType = "beta"
     uploadFile = remapJar
