Added teams system in Accessory menu. Added armor value to Accessory menu. Fixed hover highlighting on accessory visibility buttons (player rotate arrows still have this issue because mojang not big brain, I'll make my own widget to fix it).
Currently, teams don't do anything, but the system is there.
I do need to add support for FTB Teams once that's updated for 1.20.1 (will use that system instead of my one).
Next is getting the test boss to only target, be able to attack, and only be attacked by people on the same team.
Then I can create a test spawn item and make it so the team the boss checks is that of the one that spawned the boss.
Also, probably add a check on boss spawn to find all players on the same team within a certain range.

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ dependencies {
 
     // Dependencies
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}+${project.minecraft_version}"
+    modImplementation "curse.maven:architectury-api-419699:${project.architectury_version}"
     modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
     modImplementation "com.github.glitchfiend:TerraBlender-fabric:${project.fake_minecraft_version}-${project.terrablender_version}"
     // modImplementation "software.bernie.geckolib:geckolib-fabric-1.19:${project.geckolib_version}"
@@ -107,6 +108,9 @@ dependencies {
     }
     modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
     modImplementation("dev.lambdaurora:lambdynamiclights:${project.lamb_dynamic_lights_version}+${project.minecraft_version}")
+
+    //modImplementation "curse.maven:ftb-teams-fabric-438497:${project.ftb_teams_version}"
+    //modImplementation "curse.maven:ftb-library-fabric-438495:${project.ftb_library_version}"
 
     // Compat
     modCompileOnly("com.github.apace100:origins-fabric:v${project.origins_version}") {
