--- a/gradle.properties
+++ b/gradle.properties
@@ -14,12 +14,13 @@ mixinextras_version=0.1.1
 modrinth_id=WbwMfRsz
 
 # Mod Properties
-mod_version=1.7.3
+mod_version=1.8.0
 maven_group=com.github.jakeb072001
 archives_base_name=terramine
 
 # Dependencies
 fabric_version=0.85.0
+architectury_version=5084451
 cca_version=5.2.1
 libgui_version=8.1.1
 expandability_version=9.0.0
@@ -40,3 +41,5 @@ apoli_version=2.9.0
 calio_version=1.11.0
 haema_version=4464839
 wthit_version=8.1.0
+ftb_teams_version=4623115
+ftb_library_version=4596510
